adding navigation to main page

--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<link
+<html lang="en"></html>
+
+<!-- Head -->
+<head> 
+  <link
   charset="utf-8"
-  href="/css/main.css"
+  href="css/normalize.css"
   media="screen"
   rel="stylesheet"
 />
-<head> 
-
+<link
+charset="utf-8"
+href="css/main.css"
+media="screen"
+rel="stylesheet"
+/>
 </head>
+
+<title>Photography Portfolio - Vivian</title> 
+<!-- Navigation --> 
+<nav>
+<ul class="main_nav" style="list-style: none;">
+  <li class="item"><a href="/behindthelens">Behind The Lens</a></li>
+  <li class="item"><a href=“/photography">Photography</a></li>
+  <li class="item"><a href=“/resume">Resume</a></li>
+  <li class="item"><a href="/contact">Contact</a></li>
+</ul>
+</nav>
+
+<body> 
+  <h1 class="/behindthelens">About</h1>
+</body>
