Adding Behind the Lens Page
adding images and sizing

--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en"></html>
-
 <!-- Head -->
 <head> 
   <link
@@ -19,6 +18,7 @@ rel="stylesheet"
 
 <title>Photography Portfolio - Vivian</title> 
 <!-- Navigation --> 
+<div class="navigation">
 <nav>
 <ul class="main_nav" style="list-style: none;">
   <li class="item"><a href="/behindthelens">Behind The Lens</a></li>
@@ -27,7 +27,63 @@ rel="stylesheet"
   <li class="item"><a href="/contact">Contact</a></li>
 </ul>
 </nav>
+</div>
 
-<body> 
-  <h1 class="/behindthelens">About</h1>
+<!-- Behind the Lens -->
+
+
+
+<!-- Photography -->
+<div id="header">
+  <h1 class="/photography" >About</h1>
+</div>
+
+<body class="photography">
+  <h2>Photography</h2>
+    <img src="../images/Perfetti.FF03.png" alt="abstract leaves" height="400"
+    loading="lazy" width="600"/>
+      <p> Abtract Leaves taken in spring of 2021 on a Nikon 3500.</p>
+    <img src="../images/Perfetti.LSF03.png" alt="abstract construction" height="400"
+    loading="lazy" width="600"/>
+      <p> Abstract Construction taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../images/Perfetti.FF01.png" alt="depth of leaf" height="400"
+    loading="lazy" width="600"/>
+      <p> Depth of Leaf taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../images/Perfetti.FF01.png" alt="depth of leaf" height="400"
+    loading="lazy" width="600"/>
+      <p> Depth of Leaf taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../images/Perfetti.FF02.png" alt="depth of flower" height="400"
+    loading="lazy" width="600"/>
+      <p> Depth of Flower taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../images/Perfetti.FF04.png" alt="contrasting petals" height="400"
+    loading="lazy" width="600"/>
+      <p> Contrasting Petals taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../images/Perfetti.FF05.png" alt="fly away fleaves" height="400"
+    loading="lazy" width="600"/>
+      <p> Fly Away Leaves taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../images/Perfetti.FF06.png" alt="a hand in nature" height="400"
+    loading="lazy" width="600"/>
+      <p> A Hand in Nature taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../images/Perfetti.LSF01.png" alt="timeline to plastic" height="400"
+    loading="lazy" width="600"/>
+      <p> Timeline to Plastic taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../images/Perfetti.LSF02.png" alt="A Nightmare Amoung" height="400"
+    loading="lazy" width="600"/>
+      <p> A Nightmare Amoung taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../images/Perfetti.FF05.png" alt="fly away fleaves" height="400"
+    loading="lazy" width="600" />
+      <p> Fly Away Leaves taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../images/Perfetti.FF05.png" alt="fly away fleaves" height="400"
+    loading="lazy" width="600"/>
+      <p> Fly Away Leaves taken in Spring 2021 on a Nikon 3500.</p>
 </body>
+
+
+<!--Resume -->
+
+
+
+<!-- Contact -->
+
+
+
