Adding graphics, resume page, contact page, about me
Adding new pages including contact, resume, and about me pages.

--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,13 @@ rel="stylesheet"
 <title>Photography Portfolio - Vivian</title> 
 <!-- Navigation --> 
 <div class="navigation">
+  <title> <img
+    alt="website logo"
+    height="360"
+    loading="lazy"
+    src="../idm221-vep33/graphics/logonew.png"
+    width="640"
+  /></title>
 <nav>
 <ul class="main_nav" style="list-style: none;">
   <li class="item"><a href="/behindthelens">Behind The Lens</a></li>
@@ -30,60 +37,128 @@ rel="stylesheet"
 </div>
 
 <!-- Behind the Lens -->
-
+<div id="header">
+  <h1 class="/behindthelens" >Behind The Lens</h1>
+</div>
+<img
+  alt="website logo"
+  height="200"
+  loading="lazy"    
+  src="graphics/logonew.png"
+  width="200"
+/>
+<h2> Vivian Perfetti </h2>
+<img 
+alt="headshot"
+height="400"
+loading="lazy"
+src="/images/headshot.png"
+/>
+<h3> About Me </h3>
+<body> 
+  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fermentum, condimentum proin sit ac nulla urna. Ut tincidunt sit tortor fermentum. Nibh at faucibus pretium duis lectus. Sed netus viverra amet varius. Convallis vulputate tortor, nulla augue purus nisi, proin vulputate dictum. Eget interdum morbi turpis quis. Facilisi volutpat lectus eget malesuada.
+    vulputate dictum. Eget interdum morbi turpis quis. Facilisi volutpat lectus eget malesuada </p>
+</body>
 
 
 <!-- Photography -->
 <div id="header">
   <h1 class="/photography" >About</h1>
 </div>
-
+<img
+  alt="website logo"
+  height="360"
+  loading="lazy"    
+  src="graphics/logonew.png"
+  width="640"
+/>
 <body class="photography">
   <h2>Photography</h2>
-    <img src="../images/Perfetti.FF03.png" alt="abstract leaves" height="400"
+    <img src="../idm221-vep33/images/Perfetti.FF03.png" alt="abstract leaves" height="400"
     loading="lazy" width="600"/>
       <p> Abtract Leaves taken in spring of 2021 on a Nikon 3500.</p>
-    <img src="../images/Perfetti.LSF03.png" alt="abstract construction" height="400"
+    <img src="../idm221-vep33/images/Perfetti.LSF03.png" alt="abstract construction" height="400"
     loading="lazy" width="600"/>
       <p> Abstract Construction taken in Spring 2021 on a Nikon 3500.</p>
-    <img src="../images/Perfetti.FF01.png" alt="depth of leaf" height="400"
+    <img src="../idm221-vep33/images/Perfetti.FF01.png" alt="depth of leaf" height="400"
     loading="lazy" width="600"/>
       <p> Depth of Leaf taken in Spring 2021 on a Nikon 3500.</p>
-    <img src="../images/Perfetti.FF01.png" alt="depth of leaf" height="400"
+    <img src="../idm221-vep33/images/Perfetti.FF02.png" alt="depth of leaf" height="400"
     loading="lazy" width="600"/>
       <p> Depth of Leaf taken in Spring 2021 on a Nikon 3500.</p>
-    <img src="../images/Perfetti.FF02.png" alt="depth of flower" height="400"
+    <img src="../idm221-vep33/images/Perfetti.FF04.png" alt="depth of flower" height="400"
     loading="lazy" width="600"/>
       <p> Depth of Flower taken in Spring 2021 on a Nikon 3500.</p>
-    <img src="../images/Perfetti.FF04.png" alt="contrasting petals" height="400"
+    <img src="../idm221-vep33/images/Perfetti.FF05.png" alt="contrasting petals" height="400"
     loading="lazy" width="600"/>
       <p> Contrasting Petals taken in Spring 2021 on a Nikon 3500.</p>
-    <img src="../images/Perfetti.FF05.png" alt="fly away fleaves" height="400"
+    <img src="../idm221-vep33/images/Perfetti.FF06.png" alt="fly away fleaves" height="400"
     loading="lazy" width="600"/>
       <p> Fly Away Leaves taken in Spring 2021 on a Nikon 3500.</p>
-    <img src="../images/Perfetti.FF06.png" alt="a hand in nature" height="400"
+    <img src="../idm221-vep33/images/Perfetti.LSF01.png" alt="a hand in nature" height="400"
     loading="lazy" width="600"/>
       <p> A Hand in Nature taken in Spring 2021 on a Nikon 3500.</p>
-    <img src="../images/Perfetti.LSF01.png" alt="timeline to plastic" height="400"
+    <img src="../idm221-vep33/images/Perfetti.LSF02.png" alt="timeline to plastic" height="400"
     loading="lazy" width="600"/>
       <p> Timeline to Plastic taken in Spring 2021 on a Nikon 3500.</p>
-    <img src="../images/Perfetti.LSF02.png" alt="A Nightmare Amoung" height="400"
+    <img src="../idm221-vep33/images/Perfetti.LSF04.png" alt="A Nightmare Amoung" height="400"
     loading="lazy" width="600"/>
       <p> A Nightmare Amoung taken in Spring 2021 on a Nikon 3500.</p>
-    <img src="../images/Perfetti.FF05.png" alt="fly away fleaves" height="400"
+    <img src="../idm221-vep33/images/Perfetti.LSF04.png" alt="Chess Game" height="400"
     loading="lazy" width="600" />
-      <p> Fly Away Leaves taken in Spring 2021 on a Nikon 3500.</p>
-    <img src="../images/Perfetti.FF05.png" alt="fly away fleaves" height="400"
+      <p> Chess Game taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../idm221-vep33/images/Perfetti.LSF05.png" alt="Tunnel of Darkness" height="400"
     loading="lazy" width="600"/>
-      <p> Fly Away Leaves taken in Spring 2021 on a Nikon 3500.</p>
+      <p> Tunnel of Darkness taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../idm221-vep33/images/Perfetti.F101.png" alt="Spiked Ball" height="400"
+      loading="lazy" width="600"/>
+      <p> Spiked Ball taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../idm221-vep33/images/Perfetti.F103.png" alt="Time Turned Soft" height="400"
+        loading="lazy" width="600"/>
+      <p> Time Turned Soft" taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../idm221-vep33/images/Perfetti.F104.png" alt="A Rain Zone" height="400"
+        loading="lazy" width="600" />
+      <p> A Rain Zone taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../idm221-vep33/images/Perfetti.F105.png" alt="Watered Away" height="400"
+        loading="lazy" width="600"/>
+      <p> Watered Away taken in Spring 2021 on a Nikon 3500.</p>
+    <img src="../idm221-vep33/images/Perfetti.F106.png" alt="Produce of Mother Nature" height="400"
+          loading="lazy" width="600"/>
+      <p> Produce of Mother Nature taken in Spring 2021 on a Nikon 3500.</p> 
 </body>
 
 
 <!--Resume -->
-
-
+<div id="header">
+  <h1 class="/resume" >Resume</h1>
+</div>
+<img
+  alt="website logo"
+  height="200"
+  loading="lazy"    
+  src="graphics/logonew.png"
+  width="200"
+/>
+<img 
+alt="Resume"
+height="900"
+loading="lazy"    
+src="graphics/Vivian_Perfetti_Resume copy.jpg"
+width="700"
+/>
 
 <!-- Contact -->
+<div id="header">
+  <h1 class="/contact" >Contact</h1>
+</div>
+<img
+  alt="website logo"
+  height="200"
+  loading="lazy"    
+  src="graphics/logonew.png"
+  width="200"
+/>
+<h2> Contact Information </h2>
 
 
 
