Added new font Cabin to Css
Added new font to CSS

--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,8 @@ rel="stylesheet"
   /></title>
 <nav>
 <ul class="main_nav" style="list-style: none;">
-  <li class="item"><a href="/behindthelens">Behind The Lens</a></li>
+  <li><a href="index.html">HOME</a></li>
+  <li class="item"><a href="behindthelens.html">Behind The Lens</a></li>
   <li class="item"><a href=“/photography">Photography</a></li>
   <li class="item"><a href=“/resume">Resume</a></li>
   <li class="item"><a href="/contact">Contact</a></li>
@@ -37,6 +38,7 @@ rel="stylesheet"
 </div>
 
 <!-- Behind the Lens -->
+<body>
 <div id="header">
   <h1 class="/behindthelens" >Behind The Lens</h1>
 </div>
@@ -52,10 +54,9 @@ rel="stylesheet"
 alt="headshot"
 height="400"
 loading="lazy"
-src="/images/headshot.png"
+src="../images/headshot.png"
 />
 <h3> About Me </h3>
-<body> 
   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fermentum, condimentum proin sit ac nulla urna. Ut tincidunt sit tortor fermentum. Nibh at faucibus pretium duis lectus. Sed netus viverra amet varius. Convallis vulputate tortor, nulla augue purus nisi, proin vulputate dictum. Eget interdum morbi turpis quis. Facilisi volutpat lectus eget malesuada.
     vulputate dictum. Eget interdum morbi turpis quis. Facilisi volutpat lectus eget malesuada </p>
 </body>
