--- a/Index.html
+++ b/Index.html
@@ -19,25 +19,23 @@ media="screen"
 rel="stylesheet"
 />
 <title>Photography Portfolio - Vivian</title> 
-
 </head>
+
 <body>
 <!-- Navigation --> 
-<nav>
-<ul class="main_nav" style="list-style: none;">
-  <li><a href="index.html">HOME</a></li>
-  <li class="item"><a href="index.html">Behind The Lens</a></li>
+<div class="nav">
+<ul style="list-style: none;">
+  <li><a href="index.html">Behind The Lens</a></li>
   <li class="item"><a href="index2.html">Photography</a></li>
   <li class="item"><a href="index3.html">Resume</a></li>
 </ul>
-</nav>
 </div>
 
 <!-- Behind the Lens -->
 
-<div id="header">
-  <h1 class="/behindthelens" >Behind The Lens</h1>
-</div>
+<div class="container">
+  <h1 class="title1" >Behind The Lens</h1>
+
 <img class="logo"
   alt="website logo"
   height="200"
@@ -45,15 +43,22 @@ rel="stylesheet"
   src="graphics/logonew.png"
   width="200"
 />
+
+<div class="wrapper">
 <h2> Vivian Perfetti </h2>
 <img 
 alt="headshot"
 height="400"
 loading="lazy"
-src="../images/headshot.png"
+src="../images/headshotofvivian"
 />
+</div>
+
+<div class="title"> 
 <h3> About Me </h3>
   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fermentum, condimentum proin sit ac nulla urna. Ut tincidunt sit tortor fermentum. Nibh at faucibus pretium duis lectus. Sed netus viverra amet varius. Convallis vulputate tortor, nulla augue purus nisi, proin vulputate dictum. Eget interdum morbi turpis quis. Facilisi volutpat lectus eget malesuada.
     vulputate dictum. Eget interdum morbi turpis quis. Facilisi volutpat lectus eget malesuada </p>
+  </div>
+</div>
 </body>
 </html>
