--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
 <!-- Head -->
 <head> 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link
   charset="utf-8"
   href="css/normalize.css"
@@ -16,87 +20,78 @@ rel="stylesheet"
 />
 </head>
 
+<body> 
 <!-- Navigation --> 
-<div class="navigation">
-    <title> <img
-      alt="website logo"
-      height="360"
-      loading="lazy"
-      src="../idm221-vep33/graphics/logonew.png"
-      width="640"
-    /></title>
-  <nav>
-  <ul class="main_nav" style="list-style: none;">
-    <li><a href="index.html">HOME</a></li>
-    <li class="item"><a href="index.html">Behind The Lens</a></li>
-    <li class="item"><a href=“index2.html">Photography</a></li>
-    <li class="item"><a href=“index3.html">Resume</a></li>
+<div class="nav">
+  <ul style="list-style: none;">
+    <li><a href="index.html">Behind The Lens</a></li>
+    <li class="item"><a href="index2.html">Photography</a></li>
+    <li class="item"><a href="index3.html">Resume</a></li>
   </ul>
-  </nav>
   </div>
 
 <!-- Photography -->
-<div id="header">
-    <h1 class="/photography" >About</h1>
-  </div>
-  <img
-    alt="website logo"
-    height="360"
-    loading="lazy"    
-    src="graphics/logonew.png"
-    width="640"
-  />
-  <body class="wrapper">
-    <h2>Photography</h2>
-      <img src="../idm221-vep33/images/Perfetti.FF03.png" alt="abstract leaves" height="400"
-      loading="lazy" width="600"/>
+<div class="container">
+    <h1 class="/photography" >Photography</h1>
+<img class="logo"
+  alt="website logo"
+  height="200"
+  loading="lazy"    
+  src="graphics/logonew.png"
+  width="200"
+/>
+    <h2 class="wrapper">Abstract Journey</h2>
+      <img src="../idm221-vep33/images/Perfetti.FF03.png" alt="abstract leaves" height="200"
+      loading="lazy" width="300"/>
         <p> Abtract Leaves taken in spring of 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.LSF03.png" alt="abstract construction" height="400"
-      loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.LSF03.png" alt="abstract construction" height="200"
+      loading="lazy" width="300"/>
         <p> Abstract Construction taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.FF01.png" alt="depth of leaf" height="400"
-      loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.FF01.png" alt="depth of leaf" height="200"
+      loading="lazy" width="300"/>
         <p> Depth of Leaf taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.FF02.png" alt="depth of leaf" height="400"
-      loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.FF02.png" alt="depth of leaf" height="200"
+      loading="lazy" width="300"/>
         <p> Depth of Leaf taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.FF04.png" alt="depth of flower" height="400"
-      loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.FF04.png" alt="depth of flower" height="200"
+      loading="lazy" width="300"/>
         <p> Depth of Flower taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.FF05.png" alt="contrasting petals" height="400"
-      loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.FF05.png" alt="contrasting petals" height="200"
+      loading="lazy" width="300"/>
         <p> Contrasting Petals taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.FF06.png" alt="fly away fleaves" height="400"
-      loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.FF06.png" alt="fly away fleaves" height="200"
+      loading="lazy" width="300"/>
         <p> Fly Away Leaves taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.LSF01.png" alt="a hand in nature" height="400"
-      loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.LSF01.png" alt="a hand in nature" height="200"
+      loading="lazy" width="300"/>
         <p> A Hand in Nature taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.LSF02.png" alt="timeline to plastic" height="400"
-      loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.LSF02.png" alt="timeline to plastic" height="200"
+      loading="lazy" width="300"/>
         <p> Timeline to Plastic taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.LSF04.png" alt="A Nightmare Amoung" height="400"
-      loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.LSF04.png" alt="A Nightmare Amoung" height="200"
+      loading="lazy" width="300"/>
         <p> A Nightmare Amoung taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.LSF04.png" alt="Chess Game" height="400"
-      loading="lazy" width="600" />
+      <img src="../idm221-vep33/images/Perfetti.LSF04.png" alt="Chess Game" height="200"
+      loading="lazy" width="300" />
         <p> Chess Game taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.LSF05.png" alt="Tunnel of Darkness" height="400"
-      loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.LSF05.png" alt="Tunnel of Darkness" height="200"
+      loading="lazy" width="300"/>
         <p> Tunnel of Darkness taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.F101.png" alt="Spiked Ball" height="400"
-        loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.F101.png" alt="Spiked Ball" height="200"
+        loading="lazy" width="300"/>
         <p> Spiked Ball taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.F103.png" alt="Time Turned Soft" height="400"
-          loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.F103.png" alt="Time Turned Soft" height="200"
+          loading="lazy" width="300"/>
         <p> Time Turned Soft" taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.F104.png" alt="A Rain Zone" height="400"
-          loading="lazy" width="600" />
+      <img src="../idm221-vep33/images/Perfetti.F104.png" alt="A Rain Zone" height="200"
+          loading="lazy" width="300" />
         <p> A Rain Zone taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.F105.png" alt="Watered Away" height="400"
-          loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.F105.png" alt="Watered Away" height="200"
+          loading="lazy" width="300"/>
         <p> Watered Away taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.F106.png" alt="Produce of Mother Nature" height="400"
-            loading="lazy" width="600"/>
+      <img src="../idm221-vep33/images/Perfetti.F106.png" alt="Produce of Mother Nature" height="200"
+            loading="lazy" width="300"/>
         <p> Produce of Mother Nature taken in Spring 2021 on a Nikon 3500.</p> 
+</div>
   </body>
+  </html>
