--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
 <!-- Head -->
 <head> 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <link
   charset="utf-8"
   href="css/normalize.css"
@@ -16,53 +20,56 @@ rel="stylesheet"
 />
 </head>
 
+<body>
 <!-- Navigation --> 
-<div class="navigation">
-    <title> <img
-      alt="website logo"
-      height="360"
-      loading="lazy"
-      src="../idm221-vep33/graphics/logonew.png"
-      width="640"
-    /></title>
-  <nav>
-  <ul class="main_nav" style="list-style: none;">
-    <li><a href="index.html">HOME</a></li>
-    <li class="item"><a href="index.html">Behind The Lens</a></li>
-    <li class="item"><a href=“index2.html">Photography</a></li>
-    <li class="item"><a href=“index3.html">Resume</a></li>
+<div class="nav">
+  <ul style="list-style: none;">
+    <li><a href="index.html">Behind The Lens</a></li>
+    <li class="item"><a href="index2.html">Photography</a></li>
+    <li class="item"><a href="index3.html">Resume</a></li>
   </ul>
-  </nav>
   </div>
 
 <!--Resume -->
-<div id="header">
-    <h1 class="/resume" >Resume</h1>
-  </div>
-  <img
+<div class="container">
+    <h1 class="title1">Resume</h1>
+  
+    <img class="logo"
     alt="website logo"
     height="200"
     loading="lazy"    
     src="graphics/logonew.png"
     width="200"
   />
+
+  <div class="image">
   <img 
   alt="Resume"
-  height="900"
+  height="300"
   loading="lazy"    
   src="graphics/Vivian_Perfetti_Resume copy.jpg"
-  width="700"
+  width="250"
   />
-  
+</div>
+
   <!-- Contact -->
-  <div id="header">
-    <h1 class="/contact" >Contact</h1>
+  <div class="wrapper">
+    <h2 class="/contact" >Contact</h2>
   </div>
-  <img
+  <div class="image">
+
+    <img class="logo2"
     alt="website logo"
-    height="200"
+    height="120"
     loading="lazy"    
     src="graphics/logonew.png"
-    width="200"
+    width="100"
   />
+</div>
   <h2> Contact Information </h2>
+  <p>
+
+  </p>
+</div>
+</body>
+  </html>
