Editing Photography Photos
Changing the direction of photos in my Photography Page

--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,7 @@ rel="stylesheet"
 alt="headshot"
 height="400"
 loading="lazy"
-src="../images/headshotofvivian"
+src="/images/headshotofvivian.png"
 />
 </div>
 
