Changing paths to photos in photography
Changing the path from idm221-vep33 to images for live server.

--- a/index2.html
+++ b/index2.html
@@ -44,52 +44,52 @@ rel="stylesheet"
       <img src="images/perfetti.FF03.png" alt="abstract leaves" height="200"
       loading="lazy" width="300"/>
         <p> Abtract Leaves taken in spring of 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.LSF03.png" alt="abstract construction" height="200"
+      <img src="images/perfetti.LSF03.png" alt="abstract construction" height="200"
       loading="lazy" width="300"/>
         <p> Abstract Construction taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.FF01.png" alt="depth of leaf" height="200"
+      <img src="images/perfetti.FF01.png" alt="depth of leaf" height="200"
       loading="lazy" width="300"/>
         <p> Depth of Leaf taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.FF02.png" alt="depth of leaf" height="200"
+      <img src="images/perfetti.FF02.png" alt="depth of leaf" height="200"
       loading="lazy" width="300"/>
         <p> Depth of Leaf taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.FF04.png" alt="depth of flower" height="200"
+      <img src="images/perfetti.FF04.png" alt="depth of flower" height="200"
       loading="lazy" width="300"/>
         <p> Depth of Flower taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.FF05.png" alt="contrasting petals" height="200"
+      <img src="images/perfetti.FF05.png" alt="contrasting petals" height="200"
       loading="lazy" width="300"/>
         <p> Contrasting Petals taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.FF06.png" alt="fly away fleaves" height="200"
+      <img src="images/perfetti.FF06.png" alt="fly away fleaves" height="200"
       loading="lazy" width="300"/>
         <p> Fly Away Leaves taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.LSF01.png" alt="a hand in nature" height="200"
+      <img src="images/perfetti.LSF01.png" alt="a hand in nature" height="200"
       loading="lazy" width="300"/>
         <p> A Hand in Nature taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.LSF02.png" alt="timeline to plastic" height="200"
+      <img src="images/perfetti.LSF02.png" alt="timeline to plastic" height="200"
       loading="lazy" width="300"/>
         <p> Timeline to Plastic taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.LSF04.png" alt="A Nightmare Amoung" height="200"
+      <img src="images/perfetti.LSF04.png" alt="A Nightmare Amoung" height="200"
       loading="lazy" width="300"/>
         <p> A Nightmare Amoung taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/Perfetti.LSF04.png" alt="Chess Game" height="200"
+      <img src="images/Perfetti.LSF04.png" alt="Chess Game" height="200"
       loading="lazy" width="300" />
         <p> Chess Game taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.LSF05.png" alt="Tunnel of Darkness" height="200"
+      <img src="images/perfetti.LSF05.png" alt="Tunnel of Darkness" height="200"
       loading="lazy" width="300"/>
         <p> Tunnel of Darkness taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.F101.png" alt="Spiked Ball" height="200"
+      <img src="images/perfetti.F101.png" alt="Spiked Ball" height="200"
         loading="lazy" width="300"/>
         <p> Spiked Ball taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.F103.png" alt="Time Turned Soft" height="200"
+      <img src="images/perfetti.F103.png" alt="Time Turned Soft" height="200"
           loading="lazy" width="300"/>
         <p> Time Turned Soft" taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.F104.png" alt="A Rain Zone" height="200"
+      <img src="images/perfetti.F104.png" alt="A Rain Zone" height="200"
           loading="lazy" width="300" />
         <p> A Rain Zone taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.F105.png" alt="Watered Away" height="200"
+      <img src="images/perfetti.F105.png" alt="Watered Away" height="200"
           loading="lazy" width="300"/>
         <p> Watered Away taken in Spring 2021 on a Nikon 3500.</p>
-      <img src="../idm221-vep33/images/perfetti.F106.png" alt="Produce of Mother Nature" height="200"
+      <img src="images/perfetti.F106.png" alt="Produce of Mother Nature" height="200"
             loading="lazy" width="300"/>
         <p> Produce of Mother Nature taken in Spring 2021 on a Nikon 3500.</p> 
 </div>
