Updating Logo Size
Changing the proportions of the logo graphic on photoshop to fit properly in the pages.

--- a/Index.html
+++ b/Index.html
@@ -40,17 +40,18 @@ rel="stylesheet"
   alt="website logo"
   height="200"
   loading="lazy"    
-  src="graphics/logonew.png"
+  src="graphics/logonew.svg"
   width="200"
 />
 
 <div class="wrapper">
-<h2> Vivian Perfetti </h2>
+<h2 class="img"> Vivian Perfetti </h2>
 <img 
 alt="headshot"
-height="400"
+height="200"
+width="200"
 loading="lazy"
-src="/images/headshotofvivian.png"
+src="images/headshotofvivian.png"
 />
 </div>
 
