--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,7 @@ rel="stylesheet"
   alt="website logo"
   height="200"
   loading="lazy"    
-  src="graphics/logonew.png"
+  src="graphics/logonew.svg"
   width="200"
 />
     <h2 class="wrapper">Abstract Journey</h2>
