Final Changes, padding, sizing, adding contact info
- Updating headshot sizing
- Changing logo sizing and padding around the logo
- Adding a contact area on bottom of pages with linkedin and email address

--- a/Index.html
+++ b/Index.html
@@ -38,18 +38,18 @@ rel="stylesheet"
 
 <img class="logo"
   alt="website logo"
-  height="200"
+  height="100"
   loading="lazy"    
   src="graphics/logonew.svg"
-  width="200"
+  width="100"
 />
 
 <div class="wrapper">
-<h2 class="img"> Vivian Perfetti </h2>
+<h2> Vivian Perfetti </h2>
 <img 
 alt="headshot"
 height="200"
-width="200"
+width="300"
 loading="lazy"
 src="images/headshotofvivian.png"
 />
@@ -60,6 +60,13 @@ src="images/headshotofvivian.png"
   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fermentum, condimentum proin sit ac nulla urna. Ut tincidunt sit tortor fermentum. Nibh at faucibus pretium duis lectus. Sed netus viverra amet varius. Convallis vulputate tortor, nulla augue purus nisi, proin vulputate dictum. Eget interdum morbi turpis quis. Facilisi volutpat lectus eget malesuada.
     vulputate dictum. Eget interdum morbi turpis quis. Facilisi volutpat lectus eget malesuada </p>
   </div>
+
+  <div class="contact">
+    <h4> Contact Information </h4>
+  <p>Contact Me at: vivperfetti@gmail.com
+    Follow Me on: LinkedIn @Vivian Perfetti </p>
+  </div>
+
 </div>
 </body>
 </html>
