--- a/index2.html
+++ b/index2.html
@@ -35,10 +35,10 @@ rel="stylesheet"
     <h1 class="/photography" >Photography</h1>
 <img class="logo"
   alt="website logo"
-  height="200"
+  height="100"
   loading="lazy"    
   src="graphics/logonew.svg"
-  width="200"
+  width="100"
 />
     <h2 class="wrapper">Abstract Journey</h2>
       <img src="images/perfetti.FF03.png" alt="abstract leaves" height="200"
@@ -92,6 +92,12 @@ rel="stylesheet"
       <img src="images/perfetti.F106.png" alt="Produce of Mother Nature" height="200"
             loading="lazy" width="300"/>
         <p> Produce of Mother Nature taken in Spring 2021 on a Nikon 3500.</p> 
+
+ <div class="contact">
+          <h4> Contact Information </h4>
+        <p>Contact Me at: vivperfetti@gmail.com
+          Follow Me on: LinkedIn @Vivian Perfetti </p>
+        </div>
 </div>
   </body>
   </html>
