--- a/index3.html
+++ b/index3.html
@@ -36,40 +36,28 @@ rel="stylesheet"
   
     <img class="logo"
     alt="website logo"
-    height="200"
+    height="100"
     loading="lazy"    
     src="graphics/logonew.svg"
-    width="200"
+    width="100"
   />
 
   <div class="image">
   <img 
   alt="Resume"
-  height="300"
+  height="400"
   loading="lazy"    
   src="graphics/vivian_perfetti_resume copy.jpg"
-  width="250"
+  width="350"
   />
 </div>
 
-  <!-- Contact -->
-  <div class="wrapper">
-    <h2 class="/contact" >Contact</h2>
-  </div>
-  <div class="image">
-
-    <img class="logo2"
-    alt="website logo"
-    height="120"
-    loading="lazy"    
-    src="graphics/logonew.png"
-    width="100"
-  />
+<div class="contact">
+  <h4> Contact Information </h4>
+<p>Contact Me at: vivperfetti@gmail.com
+  Follow Me on: LinkedIn @Vivian Perfetti </p>
 </div>
-  <h2> Contact Information </h2>
-  <p>
 
-  </p>
 </div>
 </body>
   </html>
