Adding a break to Contact
- Adding a line break to contact information so it flows on page

--- a/index2.html
+++ b/index2.html
@@ -93,8 +93,8 @@ rel="stylesheet"
 
  <div class="contact">
           <h4> Contact Information </h4>
-        <p>Contact me at: vivperfetti@gmail.com
-          Follow me on: LinkedIn @Vivian Perfetti </p>
+        <p>Contact me at: vivperfetti@gmail.com <br>
+        Follow me on: LinkedIn @Vivian Perfetti<br> </p>
         </div>
    </div>
   </body>
