--- a/Index.html
+++ b/Index.html
@@ -60,8 +60,8 @@ src="images/headshotofvivian.png"
 
   <div class="contact">
     <h4> Contact Information </h4>
-  <p>Contact me at: vivperfetti@gmail.com
-    Follow me on: LinkedIn @Vivian Perfetti </p>
+    <p>Contact me at: vivperfetti@gmail.com <br>
+      Follow me on: LinkedIn @Vivian Perfetti<br> </p>
   </div>
 
 </div>
